added search functionality

--- a/app/views/films/index.html.erb
+++ b/app/views/films/index.html.erb
@@ -1,6 +1,24 @@
 <h1>Index Page</h1>
-<ol>
-  <% @films.each do |film| %>
-    <li><%=link_to film.title, film_path(film.id)%></li>
-  <%end%>
-</ol>
+<!--<ol>
+  <%# @films.each do |film| %>
+    <li><%#link_to film.title, film_path(film.id)%>
+    </li>
+    <%#end%>
+  </ol>-->
+<div data-controller="search-films">
+  <%= form_with url: films_path, method: :get, html: {data: { search_films_target: "form" }} do |f| %>
+    <%= f.text_field :query,
+                           class: "form-control",
+                           value: params[:query],
+                           data: {
+                            action: "keyup->search-films#update",
+                            search_films_target: "input"
+                           },
+                           placeholder: "Search for a film."
+
+                           %>
+  <% end %>
+  <div data-search-films-target='list'>
+    <%= render "list", films: @films %>
+  </div>
+</div>
