--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,16 +2,35 @@
 <html>
   <head>
     <title>GhibliFilms</title>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.15/dist/tailwind.min.css" rel="stylesheet">
     <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
   <body>
-    <main class="container">
-      <%= yield %>
-    </main>
+    <div class="wrapper">
+      <header class="bg-gray-800 py-4 mb-5">
+        <nav class="container mx-auto flex justify-between items-center px-4">
+          <i class="fa-solid fa-clapperboard text-white fa-lg"></i>
+          <ul class="flex space-x-4 my-auto items-center justify-center text-white">
+            <li>Home</li>
+            <li>About</li>
+            <li>Contact</li>
+          </ul>
+        </nav>
+      </header>
+      <main class="container">
+        <%= yield %>
+      </main>
+      <footer class="bg-gray-800 py-4 mt-5">
+        <div class="container mx-auto text-center">
+          <p class="text-white">© 2023 jweber13</p>
+        </div>
+      </footer>
+    </div>
   </body>
 </html>
